# RAG

./: .env.example  .gitignore  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  run_ui.py
.docs/: analysis_system.md  design_system.md
.streamlit/: secrets.toml.example
config/: __init__.py  prompts.py  settings.py
data/: metrics.db
data/documents/: ai_overview.txt  baocao.txt  deep_learning.txt  deep_learning_vn.txt  python_basics.txt
data/vector_db/: chroma.sqlite3
examples/: test_embedding_vector_store.py  test_rag_pipeline.py
notebooks/: arXiv.ipynb
progress/: 1_PROGRESS.md  2_EMBEDDING_VECTOR_STORE.md  3_GENERATION_LAYER.md  4_STREAMLIT_UI.md  CURRENT_STATUS.md  MVP_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_2_SUMMARY.md
src/: __init__.py  __main__.py
src/api/: __init__.py  main.py
src/core/: __init__.py  cache.py  chat_history.py  exceptions.py  export.py  logging.py  memory.py  metrics.py  utils.py
src/embedding/: __init__.py  embedder.py  vector_store.py
src/generation/: __init__.py  chart_generator.py  llm_client.py  multi_step_analyzer.py  research_analyzer.py  response_synthesizer.py
src/ingestion/: __init__.py  chunking.py  loaders.py  metadata.py
src/retrieval/: __init__.py  hybrid_retriever.py  reranker.py
tests/: gen_hash.py  test_chat_history.py  test_imports.py  test_metadata_extractor.py  test_registration.py  test_research_analyzer.py  update_admin_pass.py
ui/: app.py
ui/components/: __init__.py  chat_history_manager.py  chat_interface.py  document_manager.py  document_preview.py  document_upload.py  query_interface.py
ui/pages/: __init__.py  analytics.py
